--- a/templates/survey/components/question.html
+++ b/templates/survey/components/question.html
@@ -15,7 +15,7 @@
 {# 숫자 입력 #}
 {% elif survey_question.question.type_filed == 1 %}
     <div class="mb-3">
-        <input type="number" class="form-control" name="{{ survey_question.question.pk }}" id="{{ survey_question.question.pk }}" placeholder="숫자를 입력하세요." {% if not survey_question.mandatory %}required{% endif %}>
+        <input type="number" class="form-control" name="{{ survey_question.question.pk }}" id="{{ survey_question.question.pk }}" placeholder="숫자를 입력하세요." {% if survey_question.mandatory %}required{% endif %}>
         <label for="{{ survey_question.question.pk }}" class="form-label"></label>
     </div>
 {# Radio 입력 #}
@@ -68,42 +68,7 @@
 {# 넓은 텍스트 입력 #}
 {% elif survey_question.question.type_filed == 5 %}
     <div class="mb-3">
-        <textarea class="form-control" name="{{ survey_question.question.pk }}" id="{{ survey_question.question.pk }}" rows="3" placeholder="텍스트를 입력하세요" {% if not survey_question.mandatory %}required{% endif %}></textarea>
+        <textarea class="form-control" name="{{ survey_question.question.pk }}" id="{{ survey_question.question.pk }}" rows="3" placeholder="텍스트를 입력하세요" {% if survey_question.mandatory %}required{% endif %}></textarea>
         <label for="{{ survey_question.question.pk }}" class="form-label"></label>
     </div>
 {% endif %}
-
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        document.querySelectorAll('input[name="{{ survey_question.question.pk }}"]').forEach(function (radio) {
-            radio.addEventListener('change', function () {
-                // 모든 텍스트 입력 필드를 숨김
-                document.querySelectorAll('div[id^="other_text_div_"]').forEach(function (div) {
-                    div.style.display = 'none';
-                    div.querySelector('input').value = '';  // 텍스트 입력 필드 초기화
-                });
-
-                // 선택한 답변이 is_other 옵션인지 확인하고, 해당 필드 표시
-                if (this.dataset.isOther === "true") {
-                    document.getElementById('other_text_div_' + this.id.split('_')[1]).style.display = 'block';
-                }
-            });
-        });
-    });
-     document.addEventListener('DOMContentLoaded', function () {
-        // 체크박스 처리
-        document.querySelectorAll('input[type="checkbox"][data-is-other="true"]').forEach(function (checkbox) {
-            checkbox.addEventListener('change', function () {
-                const otherTextDiv = document.getElementById('other_text_div_' + this.id.split('_')[1]);
-
-                if (checkbox.checked) {
-                    otherTextDiv.style.display = 'block';
-                } else {
-                    otherTextDiv.style.display = 'none';
-                    otherTextDiv.querySelector('input').value = ''; // 체크 해제 시 입력 필드 초기화
-                }
-            });
-        });
-    });
-</script>
