hotfix: 체크박스가 mandatory인 경우 하나라도 체크해야 넘어갈 수 있도록 설정

--- a/templates/survey/user_survey_form.html
+++ b/templates/survey/user_survey_form.html
@@ -6,7 +6,7 @@
             <h1 class="display-5 fw-bold">{{ object.title }}</h1>
             <p class="fs-4">{{ object.description }}</p>
         </div>
-        <form method="post">
+        <form method="post" onsubmit="return validateCheckBoxes()">
             {% csrf_token %}
             {% for survey_question in survey_questions %}
                 {% include 'survey/components/question.html' %}
@@ -20,14 +20,36 @@
             const otherTextDiv = document.getElementById('other_text_div_' + element.id.split('_')[1]);
             if (element.checked) {
                 otherTextDiv.style.display = "block";  // 텍스트 입력 필드를 표시
+                otherTextDiv.required = true;
             } else {
                 otherTextDiv.style.display = "none";   // 텍스트 입력 필드를 숨김
-                otherTextDiv.querySelector('input').value = ''; // 체크 해제 시 입력 필드 초기화
+                otherTextDiv.required = false;
+                otherTextDiv.value = ''; // 체크 해제 시 입력 필드 초기화
             }
+        }
+
+        const validateCheckBoxes = () => {
+            const atLeastOneSelect = (name) => {
+                const checkboxes = document.getElementsByName(name)
+                return Array.prototype.slice.call(checkboxes).some((checkbox) => checkbox.checked);
+            }
+            const requiredCheckboxes = document.querySelectorAll('input[type="checkbox"][is-mandatory="true"]:not([data-is-other])')
+            const names = Array.from(new Set(Array.prototype.map.call(requiredCheckboxes, (checkbox) => {
+                return checkbox.name;
+            })))
+            for (let name of names) {
+                if(!atLeastOneSelect(name)) {
+                    alert("하나 이상의 옵션을 선택해야 합니다!")
+                    document.getElementsByName(name)[0].focus()
+                    return false;
+                }
+            }
+            return true;
         }
 
         document.addEventListener('DOMContentLoaded', () => {
             document.querySelectorAll('input[data-is-other="true"]').forEach((otherSelection) => {
+                // radio 다른 선택지 선택 시 기타 입력칸 제거
                 if (otherSelection.type === "radio") {
                     document.querySelectorAll(`input[type="radio"][name="${otherSelection.name}"]:not([data-is-other])`)
                         .forEach((selection) => {
