핸드폰 번호 수정 기능/구현중

--- a/templates/accounts/myprofile.html
+++ b/templates/accounts/myprofile.html
@@ -23,6 +23,7 @@
                                 <p><strong>연구 종료일:</strong> {{ current_user.huami.end_date }}</p>
                                 <a href="{% url 'accounts:user_password' %}" class="btn btn-secondary mt-3">비밀번호 재설정</a>
                                 <a href="{% url 'accounts:user_recertification' %}" class="btn btn-secondary mt-3">화웨이(Zepp Life) 계정 재설정</a>
+                                <a href="{% url 'accounts:change_user_phone_number' %}" class="btn btn-secondary mt-3">전화번호 재설정</a>
                             </div>
                         </div>
                     </div>
