비밀번호 찾는 방법 선택화면/ 핸드폰을 이용한 찾기 구현 기능

--- a/templates/accounts/phone_number_password_reset_request.html
+++ b/templates/accounts/phone_number_password_reset_request.html
@@ -10,6 +10,9 @@
 {% bootstrap_messages %}
 
 {% load static %}
+{% bootstrap_messages %}
+
+{% load static %}
 
 {% block content %}
 <section class="vh-100 gradient-custom">
@@ -18,19 +21,17 @@
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
+
             <div class="mb-md-5 mt-md-4 pb-5">
               <form method="post" class="form">
-                {% csrf_token %}
-                <h2 class="fw-bold mb-2 text-uppercase">조기진통감지 및 스트레스 완화</h2>
-                <p class="text-white-50 mb-5">로그인 정보를 입력해주세요!</p>
-                {% bootstrap_form form %}
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">로그인하기</button>
+                <h2 class="fw-bold mb-2 text-uppercase">비밀번호 찾기</h2>
+                <p class="text-white-50 mb-5">회원가입 시 기입한 정보를 입력해주세요</p>
+                  {% csrf_token %}
+                  {% bootstrap_form form %}
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">비밀번호 초기화 하기</button>
               </form>
             </div>
-
             <div>
-              <p class="mb-0"><a href="{% url 'accounts:find_username_request' %}" class="text-white-50 fw-bold">아이디 찾기</a>
-              <p class="mb-0"><a href="{% url 'accounts:select_password_reset_request' %}" class="text-white-50 fw-bold">비밀번호 찾기</a>
               <p class="mb-0"><a href="{% url 'accounts:signup' %}" class="text-white-50 fw-bold">회원가입</a>
               </p>
             </div>
@@ -40,4 +41,20 @@
     </div>
   </div>
 </section>
+     <script>
+        document.getElementById('id_phone_number').addEventListener('blur', function (e) {
+            let phoneNumberField = document.getElementById('id_phone_number');
+            phoneNumberField.value = phoneNumberField.value.replace(/\D/g, ''); // 숫자만 남김
+
+            var x = e.target.value.replace(/\D/g, '').match(/(\d{3})(\d{3,4})(\d{4})/);
+            if (x) {
+                e.target.value = x[1] + '-' + x[2] + '-' + x[3];
+            }
+        });
+
+
+    </script>
 {% endblock content %}
+
+
+
