--- a/templates/accounts/select_reset_password.html
+++ b/templates/accounts/select_reset_password.html
@@ -20,19 +20,13 @@
           <div class="card-body p-5 text-center">
             <div class="mb-md-5 mt-md-4 pb-5">
                 <h2 class="fw-bold mb-2 text-uppercase">비밀번호 찾기</h2>
-                <p class="text-white-50 mb-5">찾을 방법을 선택해주세요!</p>
+                <p class="text-white-50 mb-5"></p>
                <div class="d-flex flex-column gap-3 mb-4">
   <button
     class="btn btn-outline-light btn-lg px-5 fs-5"
     type="button"
     onclick="window.location.href='{% url 'accounts:email_password_reset_request' %}'">
     이메일로 찾기
-  </button>
-  <button
-    class="btn btn-outline-light btn-lg px-5 fs-5"
-    type="button"
-    onclick="window.location.href='{% url 'accounts:phone_number_password_reset_request' %}'">
-    핸드폰 번호로 찾기
   </button>
 </div>
 
