--- a/templates/accounts/userManage.html
+++ b/templates/accounts/userManage.html
@@ -28,6 +28,7 @@
                     <th scope="col" data-column="email">이메일</th>
                     <th scope="col" data-column="age">나이</th>
                     <th scope="col" data-column="research_status">연구 상태</th>
+                    <th scope="col" data-column="pregnancy_start_date">임신 시작일</th>
                     <th scope="col" data-column="join_date">연구 시작일</th>
                     <th scope="col" data-column="end_date">연구 종료일</th>
                     <th scope="col" data-column="showed_sync_status">동기화 상태</th>
@@ -61,6 +62,11 @@
                                     {% if user.huami.research_status == 'completed' %}selected{% endif %}>완료
                             </option>
                         </select></td>
+                        <td>
+                            <input type="date" class="form-control pregnancy_start_date"
+                                   data-user-id="{{ user.pk }}"
+                                   value="{{ user.huami.pregnancy_start_date|date:'Y-m-d' }}">
+                        </td>
                         <td>
                             <input type="date" class="form-control start-date"
                                    data-user-id="{{ user.pk }}"
@@ -183,7 +189,11 @@
                         .catch(error => console.error('Error:', error));
                 })
             }
-
+    
+            const pregnancyDateElements = document.querySelectorAll('.pregnancy_start_date');
+            pregnancyDateElements.forEach(element => {
+                update_research_date(element, 'pregnancy_start_date')
+            })
             const startDateElements = document.querySelectorAll('.start-date');
             startDateElements.forEach(element => {
                 update_research_date(element, 'join-date')
