--- a/templates/accounts/userManage.html
+++ b/templates/accounts/userManage.html
@@ -25,13 +25,14 @@
                 <tr>
                     <th scope="col">액션</th> <!-- 새로운 열 추가 -->
                     <th scope="col" data-column="name">이름</th>
-                    <th scope="col" data-column="email">이메일</th>
                     <th scope="col" data-column="age">나이</th>
                     <th scope="col" data-column="research_status">연구 상태</th>
+                    <th scope="col" data-column="research_year">연구 년도 </th>
                     <th scope="col" data-column="pregnancy_start_date">임신 시작일</th>
                     <th scope="col" data-column="join_date">연구 시작일</th>
                     <th scope="col" data-column="end_date">연구 종료일</th>
                     <th scope="col" data-column="showed_sync_status">동기화 상태</th>
+                    <th scope="col" data-column="email">이메일</th>
                     <th scope="col" data-column="note">노트</th>
                 </tr>
                 </thead>
@@ -49,7 +50,6 @@
                             {{ user.huami.fullname }}
                         {% endif %}
                         </td>
-                        <td>{{ user.huami.email }}</td>
                         <td>{{ user.huami.age }}</td>
                         <td><select class="form-control research-status" data-user-id="{{ user.pk }}">
                             <option value="preparing"
@@ -60,6 +60,18 @@
                             </option>
                             <option value="completed"
                                     {% if user.huami.research_status == 'completed' %}selected{% endif %}>완료
+                            </option>
+                        </select></td>
+
+                        <td><select class="form-control research-year" data-user-id="{{ user.pk }}" style="width: 75px;">
+                            <option value="none"
+                                    {% if user.huami.research_year == 'none' %}selected{% endif %}> 미확인
+                            </option>
+                            <option value="2023" {% if user.huami.research_year == '2023' %}selected{% endif %}>
+                                2023년
+                            </option>
+                            <option value="2024"
+                                    {% if user.huami.research_year == '2024' %}selected{% endif %}>2024년
                             </option>
                         </select></td>
                         <td>
@@ -84,6 +96,7 @@
                                 비정상
                             {% endif %}
                         </td>
+                     <td>{{ user.huami.email }}</td>
                         <td>{{ user.huami.note }}</td>
                     </tr>
                 {% endfor %}
@@ -119,9 +132,44 @@
                     }
 
                     // Redirect to the sorted URL
-                    window.location.href = `?page=${currentPage}&order_by=${column}&direction=${direction}&search=${currentSearch ? currentSearch : ''}`;
+                    window.location.href = `?page=${1}&order_by=${column}&direction=${direction}&search=${currentSearch ? currentSearch : ''}`;
                 });
             });
+            
+            const researchYearElements = document.querySelectorAll('.research-year');
+            researchYearElements.forEach(element => {
+                // 클릭 이벤트 전파 방지
+                element.addEventListener('click', function (event) {
+                    event.stopPropagation();
+                });
+
+                // 값이 변경될 때 AJAX 요청 보내기
+                element.addEventListener('change', function () {
+                    const userId = this.getAttribute('data-user-id');
+                    const newYear = this.value;
+
+                    fetch("{% url 'accounts:update_research_year' %}", {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'X-CSRFToken': '{{ csrf_token }}'
+                        },
+                        body: JSON.stringify({
+                            user_id: userId,
+                            new_year: newYear
+                        })
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            if (data.success) {
+                                alert('연구 년도가 성공적으로 업데이트되었습니다.');
+                            } else {
+                                alert('연구 상태 업데이트에 실패했습니다.');
+                            }
+                        })
+                        .catch(error => console.error('Error:', error));
+                })
+            })
 
             const researchStatusElements = document.querySelectorAll('.research-status');
             researchStatusElements.forEach(element => {
