--- a/templates/auth/forgot_id.html
+++ b/templates/auth/forgot_id.html
@@ -6,10 +6,12 @@
 
 <head>
 
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Forgot id</title>
+    <title>PreCare | Forgot_id</title>
 
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
@@ -28,23 +30,33 @@
             <div class="col-md-12">
                 <div class="ibox-content">
 
-                    <h2 class="font-bold">Forgot id</h2>
+                    <h2 class="font-bold">아이디 찾기</h2>
 
                     <p>
-                        Enter your email address and your password will be reset and emailed to you.
+                        회원가입 시 기입한 이메일 정보를 입력해주세요
                     </p>
 
                     <div class="row">
 
                         <div class="col-lg-12">
-                            <form class="m-t" role="form" action="index.html">
+                            <form class="m-t" role="form" method="post">
+                                {% csrf_token %}
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Email address" required="">
+                                    <input type="email" class="form-control" placeholder="Zepp life email" required="" name="email">
                                 </div>
 
-                                <button type="submit" class="btn btn-primary block full-width m-b">Send new password</button>
+                                <button type="submit" class="btn btn-primary block full-width m-b">인증번호 보내기</button>
 
                             </form>
+                                {% if messages %}
+                                    <ul class="messages">
+                                        {% for message in messages %}
+                                            <li class="{% if message.tags %}{{ message.tags }}{% endif %}">
+                                                {{ message }}
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                {% endif %}
                         </div>
                     </div>
                 </div>
@@ -53,10 +65,10 @@
         <hr/>
         <div class="row">
             <div class="col-md-6">
-                Copyright Example Company
+                
             </div>
             <div class="col-md-6 text-right">
-               <small>© 2014-2015</small>
+               <small>dailab</small>
             </div>
         </div>
     </div>
