--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -44,7 +44,7 @@
                 <p class="text-muted text-center"><small>아직 계정이 없으신가요?</small></p>
                 <a class="btn btn-sm btn-white btn-block" href="{% url 'auth:signup' %}">회원가입</a>
             </form>
-            <p class="m-t"> <small>dailab 2025</small> </p>
+            <p class="m-t"> <small>dailab </small> </p>
         </div>
     </div>
 
