--- a/templates/auth/password_reset.html
+++ b/templates/auth/password_reset.html
@@ -6,16 +6,20 @@
 
 <head>
 
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Forgot password</title>
+    <title>PreCare | Forgot_id</title>
 
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/animate.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+
 </head>
 
 <body class="gray-bg">
@@ -26,24 +30,33 @@
             <div class="col-md-12">
                 <div class="ibox-content">
 
-                    <h2 class="font-bold">비밀번호 찾기</h2>
+                    <h2 class="font-bold">아이디 찾기</h2>
 
                     <p>
-                        아이디와 이메일 정보를 입력해 주세요
+                        회원가입 시 기입한 이메일 정보를 입력해주세요
                     </p>
 
                     <div class="row">
-
+                            
                         <div class="col-lg-12">
+                            <form method="post" class="form">
+                                <h2 class="fw-bold mb-2 text-uppercase">새 비밀번호 설정</h2>
+                
+                                  {% csrf_token %}
+                <!--                  {{ form.as_p }}-->
+                                  {% bootstrap_form form %}
+                                <button class="btn btn-outline-light btn-lg px-5" type="submit">비밀번호 변경</button>
+                              </form>
                             <form class="m-t" role="form" method="post">
-                                 {% csrf_token %}
+                                {% csrf_token %}
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="아이디" required="" name="username">
                                     <input type="email" class="form-control" placeholder="Zepp life email" required="" name="email">
                                 </div>
 
                                 <button type="submit" class="btn btn-primary block full-width m-b">인증번호 보내기</button>
-                                 {% if messages %}
+
+                            </form>
+                                {% if messages %}
                                     <ul class="messages">
                                         {% for message in messages %}
                                             <li class="{% if message.tags %}{{ message.tags }}{% endif %}">
@@ -52,8 +65,6 @@
                                         {% endfor %}
                                     </ul>
                                 {% endif %}
-
-                            </form>
                         </div>
                     </div>
                 </div>
@@ -62,7 +73,7 @@
         <hr/>
         <div class="row">
             <div class="col-md-6">
-
+                
             </div>
             <div class="col-md-6 text-right">
                <small>dailab</small>
