--- a/templates/auth/verify_email_code_password.html
+++ b/templates/auth/verify_email_code_password.html
@@ -6,16 +6,20 @@
 
 <head>
 
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Forgot password</title>
+    <title>PreCare | Verify_Email_Id</title>
 
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/animate.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+
 </head>
 
 <body class="gray-bg">
@@ -26,24 +30,25 @@
             <div class="col-md-12">
                 <div class="ibox-content">
 
-                    <h2 class="font-bold">비밀번호 찾기</h2>
+                    <h2 class="font-bold">아이디 찾기</h2>
 
                     <p>
-                        아이디와 이메일 정보를 입력해 주세요
+                        이메일로 온 인증번호를 입력해 주세요
                     </p>
 
                     <div class="row">
 
                         <div class="col-lg-12">
                             <form class="m-t" role="form" method="post">
-                                 {% csrf_token %}
+                                {% csrf_token %}
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="아이디" required="" name="username">
-                                    <input type="email" class="form-control" placeholder="Zepp life email" required="" name="email">
+                                    <input type="text" class="form-control" placeholder="인증번호" required="" name="verification_code">
                                 </div>
 
-                                <button type="submit" class="btn btn-primary block full-width m-b">인증번호 보내기</button>
-                                 {% if messages %}
+                                <button type="submit" class="btn btn-primary block full-width m-b">인증하기</button>
+
+                            </form>
+                                {% if messages %}
                                     <ul class="messages">
                                         {% for message in messages %}
                                             <li class="{% if message.tags %}{{ message.tags }}{% endif %}">
@@ -52,8 +57,6 @@
                                         {% endfor %}
                                     </ul>
                                 {% endif %}
-
-                            </form>
                         </div>
                     </div>
                 </div>
@@ -62,10 +65,10 @@
         <hr/>
         <div class="row">
             <div class="col-md-6">
-
+                
             </div>
             <div class="col-md-6 text-right">
-               <small>dailab</small>
+               <small>dailab 2025</small>
             </div>
         </div>
     </div>
