--- a/templates/survey/survey_list.html
+++ b/templates/survey/survey_list.html
@@ -4,7 +4,7 @@
 <div class="container py-4">
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <h1 class="text-center display-5 fw-bold">설문조사</h1>
-        <p class="text-center fs-4">설문조사를 통해 연구를 도와주세요!</p>
+        <p class="text-center fs-4">QUIPP 설문은 '무증상' 또는 '유증상' 중 하나만 선택하여 진행해주세요.</p>
     </div>
     {% for survey in object_list %}
     <div class="card mb-5">
