fitbit oauth 기능추가 및 리디렉션

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -26,7 +26,7 @@
                   </a>
 
                   <!-- Fitbit 로그인 버튼 -->
-                  <a href="{% url 'accounts:admin_login' %}">
+                  <a href="{% url 'accounts:fitbit_login' %}">
                     <button class="btn btn-outline-light btn-lg px-5" type="button">
                       Fitbit으로 로그인
                     </button>
