--- a/templates/accounts/userManage.html
+++ b/templates/accounts/userManage.html
@@ -48,8 +48,8 @@
                             {{ user.huami.name }}
                         {% elif user.huami.fullname %}
                             {{ user.huami.fullname }}
-                        {% elif user.fitbit.fullname %}
-                            {{ user.fitbit.fullname }}
+                        {% elif user.fitbit.full_name %}
+                            {{ user.fitbit.full_name }}
                         {% endif %}
                         </td>
                         <td>{{ user.huami.age }}</td>
