관리자 페이지 추가

--- a/templates/header.html
+++ b/templates/header.html
@@ -33,17 +33,28 @@
                         </a>
                     </li>
                     {% if user.is_superuser %}
-                        <li>
-                            <a href="{% url 'accounts:userManage' %}?page=1&order_by=huami__name&direction=asc"
-                               class="nav-link text-white">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                                     class="bi bi-people-fill" viewBox="0 0 16 16">
-                                    <path
-                                            d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
-                                </svg>
-                                huami 참여자 관리
-                            </a>
-                        </li>
+                    <li>
+                        <a href="{% url 'accounts:fitbitUserManage' %}?page=1&order_by=fitbit__full_name&direction=asc"
+                           class="nav-link text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                 class="bi bi-people-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
+                            </svg>
+                            fitbit 참여자 관리
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'accounts:userManage' %}?page=1&order_by=huami__name&direction=asc"
+                           class="nav-link text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                 class="bi bi-people-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
+                            </svg>
+                            huami 참여자 관리
+                        </a>
+                    </li>
                     {% endif %}
                     {% if user.is_authenticated %}
                         <li>
@@ -59,13 +70,12 @@
                 </ul>
                 {% if user.is_authenticated %}
                     <form method="post" action="{% url 'accounts:logout' %}" style="display: inline;">
-                {% csrf_token %}
-                    <button class="btn btn-secondary" type="submit">로그아웃</button>
+                        {% csrf_token %}
+                        <button class="btn btn-secondary" type="submit">로그아웃</button>
                     </form>
                 {% else %}
                     <a class="btn btn-primary" href="{% url 'accounts:login' %}" role="button">로그인</a>
                 {% endif %}
-
             </div>
         </div>
     </div>
